# api/public/swagger.json
@@ -410,6 +410,26 @@
 				]
 			}
 		},
+		"/api/v1/tx/timing": {
+			"get": {
+				"operationId": "GetTxTiming",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {}
+							}
+						}
+					}
+				},
+				"tags": [
+					"V1 Transaction"
+				],
+				"security": [],
+				"parameters": []
+			}
+		},
 		"/api/v2/health": {
 			"get": {
 				"operationId": "GetHealthStatus",
